--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,36 @@
-.ui-slider {
+body {
+	background-image: url('../images/45degreee_fabric.png');
+   }
+div.ui-slider {
    width: 250px;
    float: left;
    height: .6em;
    margin: 5px;
+   padding-right: 5px;
+   padding-left: 5px;
+   margin-bottom: 10px;
+   }
+.ui-slider .ui-slider-handle {
+   width: .6em;
+   margin-left: -.3em;
    }
 input {
    width: 60px;
    }
 #form {
-   width: 400px;
+   width: 410px;
+   float: left;
    }
 #display {
+   width: 300px;
+   margin-right: auto;
+   margin-left: auto;
    }
 .cell {
+   vertical-align: middle;
    display: table-cell;
    margin: 0px;
+   border-top: 1px dashed black;
    }
 .row {
    display: table-row;
